# hrpc-protobuf-c

./: .gitignore  CMakeLists.txt  README.md
build-cmake/: CMakeLists.txt
protobuf-c/: protobuf-c.h
protoc-c/: c_bytes_field.h  c_enum.h  c_enum_field.h  c_extension.h  c_field.cc  c_field.h  c_file.cc  c_file.h  c_generator.h  c_helpers.cc  c_helpers.h  c_message.cc  c_message.h  c_message_field.h  c_primitive_field.cc  c_primitive_field.h  c_service.h  c_string_field.cc  c_string_field.h  main.cc
